feat: 添加 VBScript 啟動器和優化 pom.xml 配置
- 新增 ETF-Tracker.vbs：提供最佳的用戶體驗，直接雙擊即可運行
- 優化 Spring Boot Maven Plugin 配置，支援可執行 JAR
- 更新 assembly 配置以包含 VBS 啟動器
- 更新 README 文件說明 VBScript 執行方式

--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,143 @@
+# =============================================================================
+# ETF Holdings Tracker - Git Ignore Configuration
+# =============================================================================
+
+# -----------------------------------------------------------------------------
 # Maven
+# -----------------------------------------------------------------------------
 target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
+# -----------------------------------------------------------------------------
 # IDE
+# -----------------------------------------------------------------------------
+# IntelliJ IDEA
 .idea/
 *.iml
 *.ipr
 *.iws
+
+# Eclipse
 .project
 .classpath
 .settings/
+.metadata/
+
+# VS Code
 .vscode/
+*.code-workspace
 *.swp
 *.swo
 
+# NetBeans
+nbproject/
+nbbuild/
+nbdist/
+.nb-gradle/
+
+# -----------------------------------------------------------------------------
 # Package Files
+# -----------------------------------------------------------------------------
 *.jar
 *.war
 *.ear
+*.class
 
+# -----------------------------------------------------------------------------
 # Build
+# -----------------------------------------------------------------------------
 build/
+out/
+dist/
 
-# H2 Database files
+# -----------------------------------------------------------------------------
+# Application Data (Runtime Generated)
+# -----------------------------------------------------------------------------
+# 資料儲存目錄 (Excel 持倉資料)
 data/
+*.xlsx
+
+# 資料庫檔案 (如有使用)
 *.db
 *.mv.db
 *.trace.db
 
+# 本地配置覆寫
+application-local.yml
+application-local.properties
+
+# -----------------------------------------------------------------------------
 # Logs
+# -----------------------------------------------------------------------------
 logs/
 *.log
 
+# -----------------------------------------------------------------------------
 # OS
+# -----------------------------------------------------------------------------
+# macOS
 .DS_Store
-Thumbs.db
+.AppleDouble
+.LSOverride
+._*
 
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+
+# -----------------------------------------------------------------------------
+# Packaging Outputs (jlink/jpackage)
+# -----------------------------------------------------------------------------
+jlink/
+jpackage/
+*.exe
+*.msi
+*.dmg
+*.deb
+*.rpm
+
+# -----------------------------------------------------------------------------
+# Test Outputs
+# -----------------------------------------------------------------------------
+test-output/
+surefire-reports/
+failsafe-reports/
+jacoco/
+coverage/
+*.exec
+
+# -----------------------------------------------------------------------------
+# Security
+# -----------------------------------------------------------------------------
+*.key
+*.pem
+*.p12
+*.jks
+secrets.yml
+secrets.properties
+.env
+.env.local
+.env.*.local
+
+# -----------------------------------------------------------------------------
 # Misc
+# -----------------------------------------------------------------------------
 *.bak
 *.tmp
 *.temp
+*.orig
+*.hprof
+rebel.xml
