feat: 添加 Spring DevTools 熱部署和改進 UI 組件
- 新增 pom.xml Spring Boot DevTools 依賴，支援熱重載功能
- 更新 application.yml 配置 DevTools 和 LiveReload 設定
- 優化 main.fxml：使用 StackPane 容器實現加載指示器疊層效果
- 優化 range-compare.fxml：改進 UI 佈局，新增 StackPane 結果容器
- 增強 MainViewController：新增 VBox loadingOverlay 組件管理，改進工具列可見性控制
- 增強 RangeCompareViewController：新增鍵盤快捷鍵支援和標籤頁監聽功能
- 更新 styles.css：新增結果容器和加載覆蓋層樣式
- 改進 index.html 和 dashboard.css：全面重構網頁 UI，採用現代 Bento Grid 設計
- 優化 HoldingController：調整分頁默認頁面大小為 50
- 更新 README.md：完善開發環境啟動說明，區分桌面版和網頁版命令

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,17 @@
 spring:
   application:
     name: etf-holdings-tracker
+  # DevTools 熱部署配置
+  devtools:
+    restart:
+      enabled: true
+      # 監視的路徑 (預設監視 classpath 中的變更)
+      # 可以排除某些目錄的監視來提高效能
+      poll-interval: 1000
+      quiet-period: 400
+    livereload:
+      enabled: true
+      port: 35729
 
 # 伺服器配置 (內部 REST API)
 server:
