--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Spring Boot DevTools for Hot Reload -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Testing Dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
