feat(storage): 新增 StorageService 介面與 HybridStorageService 混合儲存功能
重構儲存層架構，支援多種資料來源切換：

新增功能:
- 新增 StorageService 介面，定義統一的資料儲存標準操作
- 新增 HybridStorageService 混合儲存服務，結合 Google Sheets（讀取）和本地 Excel（寫入）
- 新增 Google Sheets 配置 (AppConfig.GoogleSheetsConfig)，支援公開 Sheets 讀取
- 新增 /api/system/storage-info 端點，提供資料來源狀態資訊
- 新增 isReadOnly() 與 getDataSourceInfo() 方法，用於前端判斷是否允許編輯

重構:
- ExcelStorageService 實作 StorageService 介面
- 所有 Service 層改用 StorageService 介面注入（依賴倒置原則）
- 排程任務改為每日下午 4 點 (16:00) 執行（原為 00:00）
- 修正 countRecordsBefore() 和 deleteDataBefore() 使用 isBefore() 嚴格比較

依賴更新:
- 新增 Gson 依賴用於 Google Sheets API 回應解析
- module-info.java 新增 com.google.gson 與 jakarta.annotation 模組

測試:
- 所有整合測試更新為使用 StorageService 介面
- 測試環境禁用 Google Sheets (enabled: false)

Refs: spec.md FR-016

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,14 @@ buildNumber.properties
 .mvn/timing.properties
 
 # -----------------------------------------------------------------------------
+# Credentials & Secrets
+# -----------------------------------------------------------------------------
+config/google-credentials.json
+*.pem
+*.key
+*.p12
+
+# -----------------------------------------------------------------------------
 # IDE
 # -----------------------------------------------------------------------------
 # IntelliJ IDEA
