--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
             <version>1.41.0</version>
         </dependency>
 
+        <!-- Gson for JSON parsing (used by HybridStorageService) -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
         <!-- Logstash Logback Encoder for JSON logging -->
         <dependency>
             <groupId>net.logstash.logback</groupId>
