--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -34,6 +34,10 @@ app:
     read-timeout-seconds: 10
     write-timeout-seconds: 10
 
+  # 測試環境禁用 Google Sheets，使用本地 Excel
+  google-sheets:
+    enabled: false
+
 # 測試用日誌配置
 logging:
   level:
